--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
         "dev": "nodemon server.js"
     },
     "dependencies": {
-        "@netlify/neon": "^0.1.65",
+        "@neondatabase/serverless": "^0.10.4",
         "cors": "^2.8.5",
         "dotenv": "^16.4.7",
         "express": "^4.21.2"
