Fix ES module loading crash with type module

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "darkside-pro",
     "version": "1.0.0",
+    "type": "module",
     "description": "Unlimited Personal Site on Render",
     "main": "server.js",
     "scripts": {
