--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "darkside-pro",
     "version": "1.0.0",
     "type": "module",
-    "description": "Unlimited Personal Site on Render",
+    "description": "Unlimited Personal Site on Vercel",
     "main": "server.js",
     "scripts": {
         "start": "node server.js",
